[gd_scene load_steps=11 format=3 uid="uid://kndpabe2xhun"]

[ext_resource type="Script" path="res://scripts/machine.gd" id="1_ltnn5"]
[ext_resource type="Shader" path="res://shaders/part_silhouette.gdshader" id="2_nldo5"]
[ext_resource type="Texture2D" uid="uid://dknmre30vy8l7" path="res://Assets/Part_1.png" id="3_id2fq"]
[ext_resource type="Texture2D" uid="uid://bec37u0lwepf0" path="res://Assets/Part_2.png" id="4_2cfoj"]
[ext_resource type="Texture2D" uid="uid://dxi7f3lew8hgo" path="res://Assets/visual assets/keys/a_key_light.png" id="5_iwt0l"]
[ext_resource type="Texture2D" uid="uid://bfxteimadvhs1" path="res://Assets/visual assets/keys/w_light.png" id="6_oe4rl"]
[ext_resource type="Texture2D" uid="uid://bldh8ubekrx46" path="res://Assets/visual assets/keys/s_light.png" id="7_l8feo"]
[ext_resource type="Texture2D" uid="uid://by7pkk7g4mksp" path="res://Assets/visual assets/keys/d_light.png" id="8_ub810"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_arge1"]
shader = ExtResource("2_nldo5")
shader_parameter/toggle_silouette = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mryne"]
shader = ExtResource("2_nldo5")
shader_parameter/toggle_silouette = false

[node name="MachineUI" type="CanvasLayer"]
script = ExtResource("1_ltnn5")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -212.5
offset_right = 368.0
offset_bottom = 212.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Parts required to fix the machine."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="space_1" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Part_1" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_arge1")
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_id2fq")
stretch_mode = 4

[node name="Part_2" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mryne")
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_2cfoj")
stretch_mode = 4

[node name="space_2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="space_3" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HaveAPartText" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "You have a part! You can now install it."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PuzzleControl" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/PuzzleControl"]
layout_mode = 2
size_flags_horizontal = 3

[node name="a" type="TextureRect" parent="PanelContainer/VBoxContainer/PuzzleControl"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_iwt0l")
stretch_mode = 4

[node name="w" type="TextureRect" parent="PanelContainer/VBoxContainer/PuzzleControl"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_oe4rl")
stretch_mode = 4

[node name="s" type="TextureRect" parent="PanelContainer/VBoxContainer/PuzzleControl"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("7_l8feo")
stretch_mode = 4

[node name="d" type="TextureRect" parent="PanelContainer/VBoxContainer/PuzzleControl"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_ub810")
stretch_mode = 4

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/PuzzleControl"]
layout_mode = 2
size_flags_horizontal = 3

[node name="space4" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
